assets/css/index.css
/*--------general--------*/
:root {
    --col-main-blue: #01a6e8;
    --col-main-blue-hover: #0993ca;
    --col-main-dark-blue: #054c68;
    --col-main-orange: #ffac14;
    --col-main-orange-hover: #ec9800;
    --col-main-orange-hover: #9d6600;
    --col-white: #edeaea;
    --col-black: #111111;
    --col-light-grey: #d3d3d3;
    --col-dark-grey: #aaa9a9;
    --col-light-theme-main: #f4f4f6;
    --col-light-theme-alt: #f3f3f7;
}

.container {
    width: min(100% - 40px, 1280px);
    margin-inline: auto;
}

.flex {
    display: flex;
}

.center {
    height: 100%;
    display: grid;
    place-items: center;
    justify-content: center;
    align-items: center;
}

@keyframes fadeIn {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
/*--------end of general--------*/

/*--------header--------*/

.container.flex.head {
    justify-content: space-between;
}

.dispair-air-logo {
    margin-top: 5px;
    background-image: url(../img/logo.png);
    background-size: contain;
    background-repeat: no-repeat;
    height: 75px;
    width: 80px;
    visibility: visible;
}

header {
    background-color: var(--col-light-theme-main);
    min-width: 100%;
    display: flex;
    overflow: hidden;
    box-shadow: rgba(0 0 0 / 0.2) 0px 1px 25px;
    height: 70px;
    position: sticky; 
    top: 0;
    z-index: 99;
}

nav.head {
    color: var(--col-white);
    font-size: 0px;
    display: flex;
    animation: fadeIn 0.5s ease-in-out;
}

nav.head a {
    text-decoration: none;
    color: var(--col-white);
    transition: all 0.3s ease-in-out;
    display: inline-block;
    padding: 0 15px;
    font-size: 14px;
}

nav.head {
    width: 100%;
    text-align: right;
    justify-content: space-between;
}

nav.head ul {
    justify-content: space-between;
}
nav.head ul li  {
    display: inline;
}

nav.head ul li a {
    text-transform: capitalize;
    color: var(--col-black);
}

nav.head ul li a:hover {
    text-transform: capitalize;
    color: #000;
}

nav.head ul li a.c-button {
    text-align: center;
    margin-left: 20px;
    padding: 8px 20px 8px 20px;
    width: 100px;
    border-radius: 10px;
    margin-top: 17px;
    background-color: var(--col-main-blue);
    color: var(--col-white);
    text-transform: capitalize;
    transition: all 0.3s ease-in-out;
}

nav.head ul li a.c-button:hover {
    background-color: var(--col-main-blue-hover);
    transition: all 0.3s ease-in-out;
}

i.fa-bars {
    color: var(--col-black);
    font-size: 30px;
    display: none;
}
/*--------end of header-------- */

/*--------hero--------*/

.image-container {
    position: relative;
    width: 100%;
    height: 500px; /* Adjust the height as needed */
    overflow: hidden;
}

img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -5;
}

.image-container::before {
    position: absolute;
    width: 100%;
    height: 100%;
    inset: 0;
    content: '';
    background-color: rgb(0 0 0 / 80%);
    z-index: -1;
}

h1 {
    opacity: 0;
    font-size: 50px;
    color: var(--col-white);
    z-index: 0;
    vertical-align: top;
    animation: fadeIn 0.75s ease-in-out 0.5s forwards;
}

button.breathe-in {
    text-transform: capitalize;
    opacity: 0;
    padding: 10px 10px 10px 10px;
    margin-top: 20px;
    border-radius: 10px;
    width: 120px;
    background-color: var(--col-main-blue);
    transition: 0.3s ease-in-out;
    margin-right: 10px;
    color: var(--col-white);
    animation: fadeIn 0.5s ease-in-out 1.5s forwards;
}

button.breathe-in:hover {
    width: 120px;
    background-color: var(--col-main-blue-hover);
    transition: 0.3s ease-in-out;
    margin-right: 10px;
    color: var(--col-white);
    animation: fadeIn 0.5s ease-in-out 1.5s forwards;
}

/*--------end of hero--------*/

/*--------clouds--------*/

.cloud-container {
    position: relative;
    width: 100%;
    margin-top: -70px;
    z-index: -1;
    opacity: 0;
    animation: fadeIn 0.5s ease-in-out 1.75s forwards; 
}

body {
    overflow-x: hidden;
}

@keyframes figure8 {
    0%, 100% {
        transform: translateX(0);
    }
    25%, 75% {
        transform: translateX(10px);
    }
    50% {
        transform: translateX(40px);
    }
}

.cloud-animation {    
    top: 69%;
    left: 25%;
    transform: translate(-50%, -50%);
    animation: figure8 10s infinite;
    animation: figure8 10s infinite;
    transition: transform 0.5s ease-in-out;
}

.cloud,
.cloud-two,
.cloud-three,
.cloud-four,
.cloud-mass,
.cloud-mass-two {
    animation: figure8 10s infinite;
}

.cloud,
.cloud-two,
.cloud-three,
.cloud-four {
    animation: figure8 10s infinite;
    background-image: url(../img/cloud.png);
    background-size: contain;
    background-repeat: no-repeat;
    margin-top: 25px;
    height: 90px;
    width: 100%;
    background-position: center center;
    position: absolute;
}

.cloud-mass,
.cloud-mass-two {
    animation: figure8 10s infinite;
    background-image: url(../img/cloud-mass.png);
    background-size: contain;
    background-repeat: no-repeat;
    margin-top: 13px;
    height: 110px;
    width: 100%;
    background-position: center center;
    position: absolute;
}

.cloud-mass {
    top: 68%;
    left: -40%;
    animation: figure8 12.5s infinite;
    height: 110px;
    width: 100%;
}

.cloud-mass-two {
    top: 68%;
    left: 40%;
    animation: figure8 12.75s infinite;
    height: 110px;
    width: 100%;
}

.cloud {
    top: 70%;
    left: 26%;
    animation: figure8 15s infinite;
}

.cloud-two {
    top: 70%;
    left: -26%;
    animation: figure8 15s infinite;
}

.cloud-three {
    top: 68%;
    left: -20%;
    animation: figure8 12s infinite;
}

.cloud-four {
    top: 69%;
    left: 20%;
    animation: figure8 12s infinite;
}
/*--------end of clouds---------*/

/*--------products--------*/
#products {
    padding: 200px 0 125px 0;
    color: var(--col-black);
}

.products {
    box-shadow: rgba(0 0 0 / 0.2) 0px 5px 10px;
}
/* ... */

